# Continual_TSDiff

./: .gitignore  README.md  list_datasets.py  pyproject.toml  requirements.txt  run.txt
01_kdd_cup/: kdd_cup_2018_without_missing_checkpoint_best.pth  kdd_cup_2018_without_missing_checkpoint_last.pth  results.yaml
01_m4/: m4_hourly_checkpoint_best.pth  m4_hourly_checkpoint_last.pth  results.yaml
01_pedestrian/: pedestrian_counts_checkpoint_best.pth  pedestrian_counts_checkpoint_last.pth  results.yaml
01_solar/: results.yaml  solar_nips_checkpoint_best.pth  solar_nips_checkpoint_last.pth  uber_tlc_hourly_checkpoint_best.pth  uber_tlc_hourly_checkpoint_last.pth
01_uber/: results.yaml  uber_tlc_hourly_checkpoint_best.pth  uber_tlc_hourly_checkpoint_last.pth
02_kdd_cup_exchange_rate/: exchange_rate_nips_checkpoint_best.pth  exchange_rate_nips_checkpoint_last.pth  results.yaml
02_solar_uber/: results.yaml  uber_tlc_hourly_checkpoint_best.pth  uber_tlc_hourly_checkpoint_last.pth
backward_transfer_eval/: continual_evaluation_results.yaml
backward_transfer_results/: backward_transfer_results.yaml
configs/: eval_continual.yaml
configs/train_sfdiff/: test.yaml
continual_experiments/: continual_learning_summary.yaml
debug_continual_experiments/: continual_learning_summary.yaml
src/: dataGeneration.py
test_dropout/: kdd_cup_2018_without_missing_checkpoint_best.pth  kdd_cup_2018_without_missing_checkpoint_last.pth  results.yaml
test_dropout_03/: kdd_cup_2018_without_missing_checkpoint_best.pth  kdd_cup_2018_without_missing_checkpoint_last.pth  results.yaml
(+413 files in other folders)
